--- a/HeatmapJS/heatmap-style.css
+++ b/HeatmapJS/heatmap-style.css
@@ -16,3 +16,12 @@ body {
 .leaflet-container {
   background: rgba(0, 0, 0, 0.8) !important;
 }
+
+#startMeasurement {
+  position: absolute;
+  width: 50px;
+  height: 30px;
+  z-index: 10;
+  top: 95%;
+  left: 96%;
+}
