--- a/HeatmapJS/heatmap-style.css
+++ b/HeatmapJS/heatmap-style.css
@@ -17,11 +17,23 @@ body {
   background: rgba(0, 0, 0, 0.8) !important;
 }
 
-#startMeasurement {
+.buttonPlacement {
   position: absolute;
-  width: 50px;
-  height: 30px;
   z-index: 10;
-  top: 95%;
-  left: 96%;
+  bottom: 20px;
+  left: 2px;
+}
+
+#download div,
+#startMeasurement div {
+  width: 80px;
+  text-align: center;
+  background: #ffffff;
+  box-sizing: border-box;
+  margin: 5px;
+}
+
+#download div:hover,
+#startMeasurement div:hover {
+  cursor: pointer;
 }
